# ImageProcessing

./: .dir-locals.el  .dir_locals.el  .gitignore  .gitmodules  CMakeLists.txt
TGV/: CMakeLists.txt  TGV.cpp  TGV.hpp
cmake/: halide.cmake  utility.cmake
ext/: CMakeLists.txt  boost
gl/: gl.hpp
snipets/: CMakeLists.txt
snipets/TGV/: CMakeLists.txt  test_TGV.cpp
snipets/cereal/: CMakeLists.txt  test_cereal.cpp
snipets/ceres/: CMakeLists.txt  bundle_adjust.cpp  curve_fitting.cpp  hello_world.cpp  powells_function.cpp
snipets/eigen/: CMakeLists.txt  test_eigen.cpp
snipets/feature/: CMakeLists.txt  test_orb.cpp
snipets/gl/: CMakeLists.txt  test_gl.cpp  test_gl_point.cpp  test_glfw.cpp  test_gray_gl.cpp  test_lightning.cpp
snipets/halide/: CMakeLists.txt  test_halide.cpp
snipets/halide/halide/: halide_normalize.cpp  halide_sobel.cpp
snipets/profiler/: CMakeLists.txt  test_google_glog.cpp  test_google_profiler.cpp  test_valgrind.cpp
snipets/sandbox/: CMakeLists.txt  test_extract_contour.cpp  test_stdlib.cpp
snipets/slam/: CMakeLists.txt  test_slam.cpp
snipets/tutorial/: CMakeLists.txt
snipets/tutorial/core_module/: CMakeLists.txt  mat_access.cpp  mat_output.cpp
snipets/uvc_video/: CMakeLists.txt  test_make_cheeboard.cpp  test_realsense.cpp  test_uvc.cpp  test_uvc_apriltag.cpp  test_uvc_pose.cpp
src/TGV/: CMakeLists.txt  TGV.hpp
src/cereal/: eigen.hpp  opencv.hpp
src/debug_util/: utility.hpp
src/geometry/: geometry.hpp
src/gl/: CMakeLists.txt  base.cpp  base.hpp  base_include.hpp  gl.hpp  gl_object.hpp  image.cpp  image.hpp  imgui_style_color.hpp  lightning.cpp  lightning.hpp  line.cpp  line.hpp  plugin_base.cpp  plugin_base.hpp  plugin_multi.cpp  plugin_multi.hpp  plugin_simple.cpp  plugin_simple.hpp  point.cpp  point.hpp  shader.cpp  shader.hpp  simple.cpp  simple.hpp  utility.cpp  utility.hpp
src/gl/shader/: lightning.frag  lightning.vert  line.frag  line.vert  point.frag  point.vert  simple_texture.frag  simple_texture.vert
src/logging/: logging.hpp
src/slam/: CMakeLists.txt  local_mapping.hpp  loop_closing.hpp  main_loop.cpp  main_loop.hpp  map.cpp  map.hpp  tracking.cpp  tracking.hpp  visual_vocabulary.hpp
tests/: CMakeLists.txt
tests/geometry/: test_pose.cpp
